Move project link to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,6 @@
 <hr />
 <div id="#footer">
-  <a href="#top">Top</a> | <a href="{{ "/" | prepend: site.baseurl }}">Contents</a>
+  <a href="#top">Top</a> | 
+  <a href="{{ "/" | prepend: site.baseurl }}">Contents</a> |
+  <a href="{{ site.project_url }}">About {{ site.project_name }}</a>
 </div>
