--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 <!--BEGIN TITLEAREA-->
 <div id="titlearea">
  <img id="projectlogo" alt="OpenOrienteering" src="{{ "/openorienteering.png" | prepend: site.baseurl }}"/><!--
- --><span id="projectname"><a href="{{ site.project_url }}">{{ site.project_name | replace: " ", "&nbsp;" }}&nbsp;{{ version }}</a></span>
+ --><span id="projectname">{{ site.project_name | replace: " ", "&nbsp;" }}&nbsp;{{ version }}</span>
 </div>
 <!--END TITLEAREA-->
 </div>
