CSS and HTML improvments
Switch to HTML 5, Clean up syntax, improve CSS for readability, update
HTML for accessibility...

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 <!--BEGIN TITLEAREA-->
 <div id="titlearea">
  <img id="projectlogo" alt="OpenOrienteering" src="{{ "/openorienteering.png" | prepend: site.baseurl }}"/><!--
- --><span id="projectname">{{ site.project_name | replace: " ", "&nbsp;" }}&nbsp;{{ version }}</span>
+ --><h1 id="projectname">{{ site.project_name | replace: " ", "&nbsp;" }}&nbsp;{{ version }}</h1>
 </div>
 <!--END TITLEAREA-->
 </div>
