Minor CSS/HTML adjustments
Cf. #1 for discussion.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 <!--BEGIN TITLEAREA-->
 <div id="titlearea">
  <img id="projectlogo" alt="OpenOrienteering" src="{{ "/openorienteering.png" | prepend: site.baseurl }}"/><!--
- --><h1 id="projectname">{{ site.project_name | replace: " ", "&nbsp;" }}&nbsp;{{ version }}</h1>
+ --><span id="projectname">{{ site.project_name | replace: " ", "&nbsp;" }}&nbsp;{{ version }}</span>
 </div>
 <!--END TITLEAREA-->
 </div>
