--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -13,6 +13,6 @@ layout: default
 {{ content }}
   </div>
 </article>
-{% if page.edited != '' %}
+{% if page.edited %}
 <p><small>Updated on {{ page.edited }}</small></p>
 {% endif %}
