--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,6 +8,7 @@ layout: default
   </div>
 </div>
 {% endif %}
+<a id="view-on-github" href="{{ site.github.repository_url }}/tree/gh-pages">Edit on GitHub</a>
 <article class="contents">
   <div class="textblock">
 {{ content }}
