--- a/css/style.css
+++ b/css/style.css
@@ -38,3 +38,37 @@ a.el {
 .textblock img {
   max-width: 100%;
 }
+
+#view-on-github {
+  display: block;
+  float:right;
+  margin-right:-4px;
+  z-index: 10;
+  padding: 10px 50px 10px 10px;
+  background: url('../assets/blacktocat.png') #0090ff no-repeat 95% 50%;
+  box-shadow: 0 0 10px rgba(0,0,0,.5);
+  border-bottom-left-radius: 2px;
+  border-bottom-right-radius: 2px;
+  
+  color: #fff;
+  text-decoration: none;
+  text-shadow: none;
+  font-weight: 700;
+
+  transition: color 0.5s ease;
+  transition: text-shadow 0.5s ease;
+  -webkit-transition: color 0.5s ease;
+  -webkit-transition: text-shadow 0.5s ease;
+  -moz-transition: color 0.5s ease;
+  -moz-transition: text-shadow 0.5s ease;
+  -o-transition: color 0.5s ease;
+  -o-transition: text-shadow 0.5s ease;
+  -ms-transition: color 0.5s ease;
+  -ms-transition: text-shadow 0.5s ease;
+}
+
+a#view-on-github:hover , a#view-on-github:focus {text-decoration: underline;}
+
+@media print{
+  #view-on-github {display: none;}
+}
