--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,3 +5,5 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="stylesheet" href="{{ "/css/style.css" | prepend: site.baseurl }}" />
   <link rel="canonical" href="{{ page.url | replace: 'index.html','' | prepend: site.production_url }}" />
+  <link rel="shortcut icon" href="http://www.openorienteering.org/assets/openorienteering/control.ico">
+  <link rel="apple-touch-icon" href="http://www.openorienteering.org/assets/openorienteering/control.png">
