Mark external links

--- a/assets/openorienteering.css
+++ b/assets/openorienteering.css
@@ -44,3 +44,27 @@
 
 }
 
+
+/* Mark external links */
+
+:root {
+  /*
+   * https://icons.getbootstrap.com/icons/box-arrow-up-right/
+   * Copyright (c) 2019-2020 The Bootstrap Authors
+   * License: The MIT License (MIT)
+   * https://github.com/twbs/icons/blob/v1.3.0/LICENSE.md
+   */
+  --box-arrow-up-right: url('data:image/svg+xml,\
+    <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">\
+      <path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5z"/>\
+      <path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0v-5z"/>\
+    </svg>');
+}
+
+.main-content a[href^="http"]:not([href*="www.openorienteering.org"])::after {
+  content: '';
+  background: no-repeat left .25em center var(--box-arrow-up-right);
+  background-size: 75%;
+  padding-right: 1.4em;
+}
+
